resources/linear/docco.css
/*--------------------- Typography ----------------------------*/

@font-face {
    font-family: 'aller-light';
    src: url('public/fonts/aller-light.eot');
    src: url('public/fonts/aller-light.eot?#iefix') format('embedded-opentype'),
         url('public/fonts/aller-light.woff') format('woff'),
         url('public/fonts/aller-light.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'aller-bold';
    src: url('public/fonts/aller-bold.eot');
    src: url('public/fonts/aller-bold.eot?#iefix') format('embedded-opentype'),
         url('public/fonts/aller-bold.woff') format('woff'),
         url('public/fonts/aller-bold.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'novecento-bold';
    src: url('public/fonts/novecento-bold.eot');
    src: url('public/fonts/novecento-bold.eot?#iefix') format('embedded-opentype'),
         url('public/fonts/novecento-bold.woff') format('woff'),
         url('public/fonts/novecento-bold.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'fleurons';
    src: url('public/fonts/fleurons.eot');
    src: url('public/fonts/fleurons.eot?#iefix') format('embedded-opentype'),
         url('public/fonts/fleurons.woff') format('woff'),
         url('public/fonts/fleurons.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

/*--------------------- Base Styles ----------------------------*/

body {
  font-family: "aller-light";
  background: url('public/images/gray.png') #fff;
  background-size: 322px;
  margin: 0;
}

hr {
  height: 1px;
  background: #ddd;
  border: 0;
}

h1, h2, h3, h4, h5, h6 {
  color: #112233;
  font-weight: normal;
  font-family: "novecento-bold";
  text-transform: uppercase;
  line-height: 1em;
  margin-top: 50px;
}
  h1 {
    margin: 0;
    text-align: center;
  }
  h2 {
    font-size: 1.3em;
  }
  h1:after {
    content: "8";
    display: block;
    font-family: "fleurons";
    color: #999;
    font-size: 80px;
    padding: 10px 0 25px;
  }

a {
  text-decoration: none;
  color: #000;
}
  a:hover {
    text-decoration: underline;
  }

b, strong {
  font-weight: normal;
  font-family: "aller-bold";
}

blockquote {
  border-left: 5px solid #ccc;
  margin-left: 0;
  padding: 1px 0 1px 1em;
}
  .page blockquote p {
    font-family: Menlo, Consolas, Monaco, monospace;
    font-size: 14px; line-height: 19px;
    color: #999;
    margin: 10px 0 0;
    white-space: pre-wrap;
  }

pre, tt, code {
  font-family: Menlo, Consolas, Monaco, monospace;
  font-size: 12px;
  display: inline-block;
  border: 1px solid #EAEAEA;
  background: #f8f8f8;
  color: #555;
  padding: 0 5px;
  line-height: 20px;
}
  .page pre {
    margin: 0;
    width: 608px;
    padding: 10px 15px;
    background: #fcfcfc;
    -moz-box-shadow:    inset 0 0 10px rgba(0,0,0,0.1);
    -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.1);
    box-shadow:         inset 0 0 10px rgba(0,0,0,0.1);
    overflow-x: scroll;
  }
    .page pre code {
      border: 0;
      padding: 0;
      background: transparent;
    }

.fleur {
  font-family: "fleurons";
  font-size: 100px;
  text-align: center;
  margin: 40px 0;
  color: #ccc;
}

/*--------------------- Layout ----------------------------*/

.container {
  width: 760px;
  margin: 0 auto;
  background: #fff;
  background: rgba(255,255,255, 0.4);
  overflow: hidden;
}
  .page {
    width: 640px;
    padding: 30px;
    margin: 30px;
    background: #fff;
    font-size: 17px;
    line-height: 26px;
  }
    .page p {
      color: #30404f;
      margin: 26px 0;
    }

ul.sections {
  list-style: none;
  padding:0 0 5px 0;;
  margin:0;
}

.page li p {
  margin: 12px 0;
}

.toc {
  max-height: 0;
  overflow: hidden;
  text-align: center;
  font-size: 13px;
  line-height: 20px;
  -moz-transition: max-height 1s;
  -webkit-transition: max-height 1s;
  transition: max-height 1s;
}
  .header:hover .toc {
    max-height: 500px;
  }
  .toc h3 {
    margin-top: 20px;
  }
  .toc ol {
    margin: 0 0 20px 0;
    display: inline-block;
    text-align: left;
    list-style-type: upper-roman;
  }
    .toc li {
      font-family: 'novecento-bold';
    }
      .toc li a {
        font-family: 'aller-light';
      }


/*---------------------- Syntax Highlighting -----------------------------*/

td.linenos { background-color: #f0f0f0; padding-right: 10px; }
span.lineno { background-color: #f0f0f0; padding: 0 5px 0 5px; }
body .hll { background-color: #ffffcc }
body .c { color: #408080; font-style: italic }  /* Comment */
body .err { border: 1px solid #FF0000 }         /* Error */
body .k { color: #954121 }                      /* Keyword */
body .o { color: #666666 }                      /* Operator */
body .cm { color: #408080; font-style: italic } /* Comment.Multiline */
body .cp { color: #BC7A00 }                     /* Comment.Preproc */
body .c1 { color: #408080; font-style: italic } /* Comment.Single */
body .cs { color: #408080; font-style: italic } /* Comment.Special */
body .gd { color: #A00000 }                     /* Generic.Deleted */
body .ge { font-style: italic }                 /* Generic.Emph */
body .gr { color: #FF0000 }                     /* Generic.Error */
body .gh { color: #000080; font-weight: bold }  /* Generic.Heading */
body .gi { color: #00A000 }                     /* Generic.Inserted */
body .go { color: #808080 }                     /* Generic.Output */
body .gp { color: #000080; font-weight: bold }  /* Generic.Prompt */
body .gs { font-weight: bold }                  /* Generic.Strong */
body .gu { color: #800080; font-weight: bold }  /* Generic.Subheading */
body .gt { color: #0040D0 }                     /* Generic.Traceback */
body .kc { color: #954121 }                     /* Keyword.Constant */
body .kd { color: #954121; font-weight: bold }  /* Keyword.Declaration */
body .kn { color: #954121; font-weight: bold }  /* Keyword.Namespace */
body .kp { color: #954121 }                     /* Keyword.Pseudo */
body .kr { color: #954121; font-weight: bold }  /* Keyword.Reserved */
body .kt { color: #B00040 }                     /* Keyword.Type */
body .m { color: #666666 }                      /* Literal.Number */
body .s { color: #219161 }                      /* Literal.String */
body .na { color: #7D9029 }                     /* Name.Attribute */
body .nb { color: #954121 }                     /* Name.Builtin */
body .nc { color: #0000FF; font-weight: bold }  /* Name.Class */
body .no { color: #880000 }                     /* Name.Constant */
body .nd { color: #AA22FF }                     /* Name.Decorator */
body .ni { color: #999999; font-weight: bold }  /* Name.Entity */
body .ne { color: #D2413A; font-weight: bold }  /* Name.Exception */
body .nf { color: #0000FF }                     /* Name.Function */
body .nl { color: #A0A000 }                     /* Name.Label */
body .nn { color: #0000FF; font-weight: bold }  /* Name.Namespace */
body .nt { color: #954121; font-weight: bold }  /* Name.Tag */
body .nv { color: #19469D }                     /* Name.Variable */
body .ow { color: #AA22FF; font-weight: bold }  /* Operator.Word */
body .w { color: #bbbbbb }                      /* Text.Whitespace */
body .mf { color: #666666 }                     /* Literal.Number.Float */
body .mh { color: #666666 }                     /* Literal.Number.Hex */
body .mi { color: #666666 }                     /* Literal.Number.Integer */
body .mo { color: #666666 }                     /* Literal.Number.Oct */
body .sb { color: #219161 }                     /* Literal.String.Backtick */
body .sc { color: #219161 }                     /* Literal.String.Char */
body .sd { color: #219161; font-style: italic } /* Literal.String.Doc */
body .s2 { color: #219161 }                     /* Literal.String.Double */
body .se { color: #BB6622; font-weight: bold }  /* Literal.String.Escape */
body .sh { color: #219161 }                     /* Literal.String.Heredoc */
body .si { color: #BB6688; font-weight: bold }  /* Literal.String.Interpol */
body .sx { color: #954121 }                     /* Literal.String.Other */
body .sr { color: #BB6688 }                     /* Literal.String.Regex */
body .s1 { color: #219161 }                     /* Literal.String.Single */
body .ss { color: #19469D }                     /* Literal.String.Symbol */
body .bp { color: #954121 }                     /* Name.Builtin.Pseudo */
body .vc { color: #19469D }                     /* Name.Variable.Class */
body .vg { color: #19469D }                     /* Name.Variable.Global */
body .vi { color: #19469D }                     /* Name.Variable.Instance */
body .il { color: #666666 }                     /* Literal.Number.Integer.Long */

